--- a/index.html
+++ b/index.html
@@ -95,10 +95,8 @@
   <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
     <!-- Text Content -->
     <div class="lg:flex-grow md:w-1/2 lg:pr-12 md:pr-8 flex flex-col md:items-start md:text-left mb-8 md:mb-0 items-center text-center">
-      <h1 class="title-font sm:text-5xl text-3xl mb-5 font-bold text-gray-900">
-  BUILDING ICONIC CAMPAIGNS WITH
-  <br class="hidden lg:inline-block">THE RIGHT TALENT
-</h1>
+     <h1 class="title-font sm:text-5xl text-3xl mb-5 font-bold text-gray-900"> BUILDING ICONIC CAMPAIGNS WITH <br class="hidden lg:inline-block">THE RIGHT TALENT </h1>
+
 
       <p class="mb-6 leading-relaxed text-sm text-black">
         We connect brands with the perfect faces to bring their vision to life. From photoshoots to runway 
@@ -259,12 +257,47 @@ Line 2:</p>
 
 
 
+<section class="text-gray-600 body-font">
+  <div class="container px-5 py-24 mx-auto flex flex-wrap">
+    
+    <div class="flex flex-wrap md:-m-2 -m-1">
+      <div class="flex flex-wrap w-1/2">
+        <div class="md:p-2 p-1 w-1/2">
+          <img alt="gallery" class="w-full object-cover h-full object-center block" src="DSC00952.JPG">
+        </div>
+        <div class="md:p-2 p-1 w-1/2">
+          <img alt="gallery" class="w-full object-cover h-full object-center block" src="DSC00934.JPG">
+        </div>
+        <div class="md:p-2 p-1 w-full">
+          <img alt="gallery" class="w-full h-full object-cover object-center block" src="DSC00932.JPG">
+        </div>
+      </div>
+      <div class="flex flex-wrap w-1/2">
+        <div class="md:p-2 p-1 w-full">
+          <img alt="gallery" class="w-full h-full object-cover object-center block" src="DSC01018.JPG">
+        </div>
+        <div class="md:p-2 p-1 w-1/2">
+          <img alt="gallery" class="w-full object-cover h-full object-center block" src="DSC01000.JPG">
+        </div>
+        <div class="md:p-2 p-1 w-1/2">
+          <img alt="gallery" class="w-full object-cover h-full object-center block" src="DSC01055.JPG">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
 
 <section class="text-gray-600 body-font relative"> 
   <div class="container px-5 py-14 mx-auto"> <!-- reduced from py-24 to py-16 -->
     <div class="flex flex-col text-center w-full mb-12">
       <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Contact Us</h1>
-      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">We’d love to hear from you! Fill out the form below.</p>
+      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">For any questions or model hirings,please contact us :-</p>
     </div>
     <div class="lg:w-1/2 md:w-2/3 mx-auto">
       <form id="contactForm" onsubmit="sendEmail(event)">
