--- a/index.html
+++ b/index.html
@@ -291,6 +291,44 @@ Line 2:</p>
 
 
 
+<section class="text-gray-600 body-font -mt-16">
+  <div class="container px-5 py-24 mx-auto flex flex-wrap">
+    <div class="lg:w-2/3 mx-auto">
+      
+      <div class="flex flex-wrap w-full relative mb-4">
+        <img alt="gallery" class="w-full object-cover h-full object-center block" 
+             src="WhatsApp Image 2025-08-30 at 13.44.49_7972e4c3.jpg">
+      </div>
+
+      <div class="flex flex-wrap -mx-2">
+        
+        <div class="px-2 w-1/2">
+          <div class="flex flex-wrap w-full relative mb-4">
+            <img alt="gallery" class="w-full object-cover h-full object-center block" 
+                 src="WhatsApp Image 2025-08-30 at 13.44.49_66715333.jpg">
+          </div>
+        </div>
+
+        <div class="px-2 w-1/2">
+          <div class="flex flex-wrap w-full relative mb-4">
+            <img alt="gallery" class="w-full object-cover h-full object-center block" 
+                 src="WhatsApp Image 2025-09-01 at 11.06.01_2d7dc523.jpg">
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
 
 
 <section class="text-gray-600 body-font relative"> 
