--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <!-- Navbar -->
 <nav class="fixed top-0 left-0 w-full z-50 flex items-center justify-between p-4 bg-white shadow-md">
   <!-- Logo -->
-  <a class="flex title-font font-medium items-center text-gray-900 ml-5" href="index.html">
+  <a class="flex title-font font-medium items-center text-gray-900 ml-1" href="index.html">
     <img src="Facecards-logo.jpg" alt="Logo" class="w-15 h-12 object-contain" />
   </a>
 
@@ -94,25 +94,31 @@
 <section class="text-gray-600 body-font">
   <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
     <!-- Text Content -->
-    <div class="lg:flex-grow md:w-1/2 lg:pr-12 md:pr-8 flex flex-col md:items-start md:text-left mb-8 md:mb-0 items-center text-center">
-     <h1 class="title-font sm:text-5xl text-3xl mb-5 font-bold text-gray-900"> BUILDING ICONIC CAMPAIGNS WITH <br class="hidden lg:inline-block">THE RIGHT TALENT </h1>
+    <div class="lg:flex-grow md:w-1/2 lg:pr-12 md:pr-8 flex flex-col items-start text-left mb-8 md:mb-0">
+  
+  <h1 class="title-font sm:text-5xl text-3xl mb-5 font-bold text-gray-900">
+    BUILDING ICONIC CAMPAIGNS WITH 
+    <br class="hidden lg:inline-block">THE RIGHT TALENT
+  </h1>
+
+  <p class="mb-6 leading-relaxed text-sm text-black">
+    We connect brands with the perfect faces to bring their vision to life. 
+    From photoshoots to runway campaigns, our handpicked models ensure your 
+    brand stands out with elegance, style, and authenticity.
+  </p>
+
+  <div class="flex">
+    <button class="inline-flex text-white bg-black border-0 py-2 px-4 focus:outline-none hover:bg-gray-800 rounded text-lg">
+      Become a Model
+    </button>
+    <button class="ml-4 inline-flex text-white bg-black border-0 py-2 px-4 focus:outline-none hover:bg-gray-800 rounded text-lg">
+      Hire a Model
+    </button>
+  </div>
+  
+</div>
 
 
-      <p class="mb-6 leading-relaxed text-sm text-black">
-        We connect brands with the perfect faces to bring their vision to life. From photoshoots to runway 
-        campaigns, our handpicked models ensure your brand stands out with elegance, style, and 
-        authenticity.
-      </p>
-      <div class="flex justify-center">
-       <button class="inline-flex text-white bg-black border-0 py-2 px-4 focus:outline-none hover:bg-gray-800 rounded text-lg">
-  Become a Model
-</button>
-<button class="ml-4 inline-flex text-white bg-black border-0 py-2 px-4 focus:outline-none hover:bg-gray-800 rounded text-lg">
-  Hire a Model
-</button>
-
-      </div>
-    </div>
 
     <!-- Image Slider -->
     <div class="lg:max-w-xs lg:w-full md:w-1/2 w-4/6 relative overflow-hidden rounded-lg shadow-md">
@@ -145,13 +151,8 @@
 </script>
 
 <section class="text-gray-600 body-font">
-  <div class="container px-5 py-24 mx-auto">
-    <div class="flex flex-col text-center w-full mb-20">
-      <h1 class="text-2xl font-medium title-font mb-4 text-gray-900">OUR MODELS</h1>
-      <p class="lg:w-2/3 mx-auto leading-relaxed text-black">Our models embody elegance, confidence, and versatility—bringing every vision to life. With passion and professionalism, they represent the true essence of modern modeling."
+  <div class="container px-5 py-24 mx-auto"> <div class="flex flex-col text-center w-full mb-20"> <h1 class="text-2xl font-medium title-font mb-4 text-gray-900">OUR MODELS</h1> <p class="lg:w-2/3 mx-auto leading-relaxed text-black">Our models embody elegance, confidence, and versatility—bringing every vision to life. With passion and professionalism, they represent the true essence of modern modeling." Line 2:</p> </div>
 
-Line 2:</p>
-    </div>
     <div class="flex flex-wrap -m-4">
       <div class="p-4 lg:w-1/4 md:w-1/2">
         <div class="h-full flex flex-col items-center text-center">
