--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <!-- Sidebar Links -->
   <nav class="flex flex-col p-4 space-y-4 text-base">
     <a class="hover:text-gray-900" href="index.html">Home</a>
-    <a class="hover:text-gray-900" href="#">Become a Model</a>
+    <a class="hover:text-gray-900" href="https://forms.gle/wP8RNcTrhf6oL1LU6">Become a Model</a>
     <a class="hover:text-gray-900" href="aboutus.html">About Us</a>
     <a class="hover:text-gray-900" href="contact.html">Contact Us</a>
   </nav>
@@ -108,12 +108,17 @@
   </p>
 
   <div class="flex">
-    <button class="inline-flex text-white bg-black border-0 py-2 px-4 focus:outline-none hover:bg-gray-800 rounded text-lg">
-      Become a Model
-    </button>
-    <button class="ml-4 inline-flex text-white bg-black border-0 py-2 px-4 focus:outline-none hover:bg-gray-800 rounded text-lg">
-      Hire a Model
-    </button>
+   <button onclick="window.location.href='https://forms.gle/wP8RNcTrhf6oL1LU6'" 
+  class="inline-flex text-white bg-black border-0 py-2 px-4 focus:outline-none hover:bg-gray-800 rounded text-lg">
+  Become a Model
+</button>
+
+   <a href="hireamodel.html">
+  <button class="ml-4 inline-flex text-white bg-black border-0 py-2 px-4 focus:outline-none hover:bg-gray-800 rounded text-lg">
+    Hire a Model
+  </button>
+</a>
+
   </div>
   
 </div>
@@ -127,12 +132,17 @@
         <img class="w-full object-cover object-center rounded-md" src="IMG-20250830-WA0005.jpg" alt="Slide 1">
         
         <!-- Slide 2 -->
-        <img class="w-full object-cover object-center rounded-md" src="IMG-20250830-WA0018.jpg" alt="Slide 3">
+        <img class="w-full object-cover object-center rounded-md" src="IMG-20250830-WA0012.jpg" alt="Slide 2">
         <!-- Slide 3 -->
-              <img class="w-full object-cover object-center rounded-md" src="IMG-20250830-WA0014.jpg" alt="Slide 4">
+              <img class="w-full object-cover object-center rounded-md" src="WhatsApp Image 2025-09-01 at 21.54.44_98908403.jpg" alt="Slide 3">
   
-      <img class="w-full object-cover object-center rounded-md" src="IMG-20250830-WA0010.jpg" alt="Slide 5">
-      </div>
+      <img class="w-full object-cover object-center rounded-md" src="alya.jpg" alt="Slide 4">
+                  <img class="w-full object-cover object-center rounded-md" src="ch.jpg" alt="Slide 5">
+              <img class="w-full object-cover object-center rounded-md" src="car.jpg" alt="Slide 6">
+                <img class="w-full object-cover object-center rounded-md" src="white.jpg" alt="Slide 7">
+
+    
+    </div>
     </div>
   </div>
 </section>
@@ -143,7 +153,7 @@
 
   function autoSlide() {
     index++;
-    if (index > 3) index = 0; // 4 slides (0 to 3)
+    if (index > 6) index = 0; // 4 slides (0 to 3)
     slider.style.transform = `translateX(-${index * 100}%)`;
   }
 
@@ -151,7 +161,7 @@
 </script>
 
 <section class="text-gray-600 body-font">
-  <div class="container px-5 py-24 mx-auto"> <div class="flex flex-col text-center w-full mb-20"> <h1 class="text-2xl font-medium title-font mb-4 text-gray-900">OUR MODELS</h1> <p class="lg:w-2/3 mx-auto leading-relaxed text-black">Our models embody elegance, confidence, and versatility—bringing every vision to life. With passion and professionalism, they represent the true essence of modern modeling." Line 2:</p> </div>
+  <div class="container px-5 py-24 mx-auto"> <div class="flex flex-col text-center w-full mb-20"> <h1 class="text-2xl font-medium title-font mb-4 text-gray-900">OUR MODELS</h1> <p class="lg:w-2/3 mx-auto leading-relaxed text-black">Our models embody elegance, confidence, and versatility—bringing every vision to life. With passion and professionalism, they represent the true essence of modern modeling.</p> </div>
 
     <div class="flex flex-wrap -m-4">
       <div class="p-4 lg:w-1/4 md:w-1/2">
@@ -161,7 +171,10 @@
           <h2 class="title-font font-medium text-lg text-black">Nashrah Saif Siddiqui</h2>
 <h3 class="text-black mb-3">Model</h3>
 <p class="text-black mb-4">
-  Myself Nashrah, first female model of Facecards
+  Height:- 5'3,
+  Weight:- 42,
+  Eye Color:- Dark Brown,
+  Waist:- 26
 </p>
 <span class="inline-flex">
   <a href="https://www.instagram.com/nashrah08_?igsh=Ym9scjg2Z3Y4Z3o4&utm_source=qr
@@ -186,8 +199,10 @@
             <h2 class="title-font font-medium text-lg text-black">Alya Kesarwani</h2>
 <h3 class="text-black mb-3">Model</h3>
 <p class="text-black mb-4">
-  I'm a 5'3 girl who is very confident in speaking and wants to show everyone that a girl with brown skintone can become a model
-</p>
+  Height:- 5'3,
+  Weight:- 42,
+  Eye Color:- Dark Brown,
+  Waist:- 28</p>
 <span class="inline-flex">
   <a href="https://www.instagram.com/another.alyaak?utm_source=ig_web_button_share_sheet&igsh=MTR2NG1laHR2NTd1Ng==" 
      target="_blank" class="text-black">
@@ -205,15 +220,17 @@
       </div>
       <div class="p-4 lg:w-1/4 md:w-1/2">
         <div class="h-full flex flex-col items-center text-center">
-          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="Screenshot_20241031_235047_Gallery - JAGGA DAKU.jpg">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="falaknoor.jpg">
           <div class="w-full">
-           <h2 class="title-font font-medium text-lg text-black">Arya Vardhan Singh</h2>
+           <h2 class="title-font font-medium text-lg text-black">Falak Noor</h2>
 <h3 class="text-black mb-3">Model</h3>
 <p class="text-black mb-4">
-  Arya Vardhan Singh, 17, facecard model, passionate about fashion, photography, and creative expression.
-</p>
+  Height:- 5'4,
+  Weight:- 42,
+  Eye Color:- Dark Brown,
+  Waist:- 26</p>
 <span class="inline-flex">
-  <a href="https://www.instagram.com/arya.vardhan__?igsh=MWk5c3NvNDdvcDU4bQ==" 
+  <a href="https://www.instagram.com/falaknoor555?utm_source=ig_web_button_share_sheet&igsh=cGVod3BnNTQ3eXFp" 
      target="_blank" class="text-black">
     <svg fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
          class="w-5 h-5" viewBox="0 0 24 24">
@@ -229,13 +246,15 @@
       </div>
       <div class="p-4 lg:w-1/4 md:w-1/2">
         <div class="h-full flex flex-col items-center text-center">
-          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="inbound4570744338782940060 - Anita Sharma.jpg">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="mridhni2.jpg">
           <div class="w-full">
             <h2 class="title-font font-medium text-lg text-gray-900">Mridini Sharma</h2>
            <h3 class="text-black mb-3">Model</h3>
 <p class="text-black mb-4">
-  Hey its Mridini, a 15-year-old from Prayagraj, a talented dancer, creative cook, enthusiastic conversationalist, and emerging model, admired for her charm, and ability to blend passion with style.
-</p>
+  Height:- 5'3,
+  Weight:- 42,
+  Eye Color:- Dark Brown,
+  Waist:- 24</p>
 <span class="inline-flex">
   <a href="https://www.instagram.com/simply_mridini_?utm_source=ig_web_button_share_sheet&igsh=MXN4bTl2bHpjb283Zg==" 
      target="_blank" class="text-black">
@@ -251,9 +270,147 @@
           </div>
         </div>
       </div>
+
+
+<div class="p-4 lg:w-1/4 md:w-1/2">
+        <div class="h-full flex flex-col items-center text-center">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="tariq.jpg">
+          <div class="w-full">
+           <h2 class="title-font font-medium text-lg text-black">Tariq</h2>
+<h3 class="text-black mb-3">Model</h3>
+<p class="text-black mb-4">
+  Height:- 5'9,
+  Weight:- 54,
+  Eye Color:- Brown,
+  Waist:- 30</p>
+<span class="inline-flex">
+  <a href="https://www.instagram.com/ttariq_h?utm_source=ig_web_button_share_sheet&igsh=ZXNzbmtrcjZrdXVm" 
+     target="_blank" class="text-black">
+    <svg fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
+         class="w-5 h-5" viewBox="0 0 24 24">
+      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+      <circle cx="17.5" cy="6.5" r="0.5"></circle>
+    </svg>
+  </a>
+</span>
+
+          </div>
+        </div>
+      </div>
+
+
+
+<div class="p-4 lg:w-1/4 md:w-1/2">
+        <div class="h-full flex flex-col items-center text-center">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="pragati.jpg">
+          <div class="w-full">
+           <h2 class="title-font font-medium text-lg text-black">Pragati Srivastava</h2>
+<h3 class="text-black mb-3">Model</h3>
+<p class="text-black mb-4">
+  Height:- 5'5,
+  Weight:- 46,
+  Eye Color:- Brown,
+  Waist:- 28</p>
+<span class="inline-flex">
+  <a href="https://www.instagram.com/_pragati.srivastava?utm_source=ig_web_button_share_sheet&igsh=MW9rNmVmMHV3bjhwaw==" 
+     target="_blank" class="text-black">
+    <svg fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
+         class="w-5 h-5" viewBox="0 0 24 24">
+      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+      <circle cx="17.5" cy="6.5" r="0.5"></circle>
+    </svg>
+  </a>
+</span>
+
+          </div>
+        </div>
+      </div>
+
+
+<div class="p-4 lg:w-1/4 md:w-1/2">
+        <div class="h-full flex flex-col items-center text-center">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="manasvii.jpg">
+          <div class="w-full">
+           <h2 class="title-font font-medium text-lg text-black">Manasvi</h2>
+<h3 class="text-black mb-3">Model</h3>
+<p class="text-black mb-4">
+  Height:- 5'4,
+  Weight:- 53,
+  Eye Color:- Brown,
+  Waist:- 30</p>
+<span class="inline-flex">
+  <a href="https://www.instagram.com/manasviiii._.18?utm_source=ig_web_button_share_sheet&igsh=MTd3NXdnc2Rjd2k5ag==" 
+     target="_blank" class="text-black">
+    <svg fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
+         class="w-5 h-5" viewBox="0 0 24 24">
+      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+      <circle cx="17.5" cy="6.5" r="0.5"></circle>
+    </svg>
+  </a>
+</span>
+
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+      <div class="p-4 lg:w-1/4 md:w-1/2">
+        <div class="h-full flex flex-col items-center text-center">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="himadhwani.jpg">
+          <div class="w-full">
+           <h2 class="title-font font-medium text-lg text-black">Hima Madhwani</h2>
+<h3 class="text-black mb-3">Model</h3>
+<p class="text-black mb-4">
+  Height:- 5'7,
+  Weight:- 52,
+  Eye Color:- Dark Brown,
+  Waist:- 28</p>
+<span class="inline-flex">
+  <a href="https://www.instagram.com/hima.madhwanii?utm_source=ig_web_button_share_sheet&igsh=MTVqZ3VwbjNpanV6YQ==" 
+     target="_blank" class="text-black">
+    <svg fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
+         class="w-5 h-5" viewBox="0 0 24 24">
+      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+      <circle cx="17.5" cy="6.5" r="0.5"></circle>
+    </svg>
+  </a>
+</span>
+
+          </div>
+        </div>
+      </div>
+
+
+
     </div>
   </div>
 </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
