--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Desktop Menu -->
   <div class="hidden md:flex md:ml-auto items-center text-base justify-center">
     <a class="mr-5 hover:text-gray-900" href="index.html">Home</a>
-    <a class="mr-5 hover:text-gray-900" href="#">Become a Model</a>
+    <a class="mr-5 hover:text-gray-900" href="https://forms.gle/wP8RNcTrhf6oL1LU6">Become a Model</a>
     <a class="mr-5 hover:text-gray-900" href="aboutus.html">About Us</a>
     <a class="mr-5 hover:text-gray-900" href="contact.html">Contact Us</a>
   </div>
