--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
   <!-- Sidebar Links -->
   <nav class="flex flex-col p-4 space-y-4 text-base">
     <a class="hover:text-gray-900" href="index.html">Home</a>
-    <a class="hover:text-gray-900" href="#">Become a Model</a>
+    <a class="hover:text-gray-900" href="https://forms.gle/wP8RNcTrhf6oL1LU6">Become a Model</a>
     <a class="hover:text-gray-900" href="aboutus.html">About Us</a>
     <a class="hover:text-gray-900" href="contact.html">Contact Us</a>
   </nav>
