--- a/index.html
+++ b/index.html
@@ -368,6 +368,93 @@
 
 
 
+<div class="p-4 lg:w-1/4 md:w-1/2">
+        <div class="h-full flex flex-col items-center text-center">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="Ashghar.jpg">
+          <div class="w-full">
+           <h2 class="title-font font-medium text-lg text-black">Asghar</h2>
+<h3 class="text-black mb-3">Model</h3>
+<p class="text-black mb-4">
+  Height:- 6'5,
+  Weight:- 110,
+  Eye Color:- Dark Brown,
+  Waist:- 34</p>
+<span class="inline-flex">
+  <a href="https://www.instagram.com/ahmadasghar21?utm_source=ig_web_button_share_sheet&igsh=eml6YnliMnc5cWZu" 
+     target="_blank" class="text-black">
+    <svg fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
+         class="w-5 h-5" viewBox="0 0 24 24">
+      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+      <circle cx="17.5" cy="6.5" r="0.5"></circle>
+    </svg>
+  </a>
+</span>
+
+          </div>
+        </div>
+      </div>
+
+
+      <div class="p-4 lg:w-1/4 md:w-1/2">
+        <div class="h-full flex flex-col items-center text-center">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="Shivangnew.jpg">
+          <div class="w-full">
+           <h2 class="title-font font-medium text-lg text-black">Shivang Srivastava</h2>
+<h3 class="text-black mb-3">Model</h3>
+<p class="text-black mb-4">
+  Height:- 5'10,
+  Weight:- 67,
+  Eye Color:- Brown,
+  Waist:- 30</p>
+<span class="inline-flex">
+  <a href="https://www.instagram.com/unforgettxable_shivang?igsh=OWdiaTlxNWxtc291" 
+     target="_blank" class="text-black">
+    <svg fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
+         class="w-5 h-5" viewBox="0 0 24 24">
+      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+      <circle cx="17.5" cy="6.5" r="0.5"></circle>
+    </svg>
+  </a>
+</span>
+
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="p-4 lg:w-1/4 md:w-1/2">
+        <div class="h-full flex flex-col items-center text-center">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="Achintya.jpg">
+          <div class="w-full">
+           <h2 class="title-font font-medium text-lg text-black">Achintya</h2>
+<h3 class="text-black mb-3">Model</h3>
+<p class="text-black mb-4">
+  Height:- 6'1,
+  Weight:- 56,
+  Eye Color:- Brown,
+  Waist:- 30</p>
+<span class="inline-flex">
+  <a href="https://www.instagram.com/axchintyaa?igsh=eGRpbjFwcHdyc3I%3D" 
+     target="_blank" class="text-black">
+    <svg fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
+         class="w-5 h-5" viewBox="0 0 24 24">
+      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+      <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+      <circle cx="17.5" cy="6.5" r="0.5"></circle>
+    </svg>
+  </a>
+</span>
+
+          </div>
+        </div>
+      </div>
+
+
+
+
 
 
 
