--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
       <div class="p-4 lg:w-1/4 md:w-1/2">
         <div class="h-full flex flex-col items-center text-center">
-          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="Shivangnew.jpg">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="shivangnew2.webp">
           <div class="w-full">
            <h2 class="title-font font-medium text-lg text-black">Shivang Srivastava</h2>
 <h3 class="text-black mb-3">Model</h3>
@@ -427,7 +427,7 @@
 
       <div class="p-4 lg:w-1/4 md:w-1/2">
         <div class="h-full flex flex-col items-center text-center">
-          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="Achintya.jpg">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="Achintyanew.webp">
           <div class="w-full">
            <h2 class="title-font font-medium text-lg text-black">Achintya</h2>
 <h3 class="text-black mb-3">Model</h3>
