--- a/aboutus.html
+++ b/aboutus.html
@@ -30,6 +30,8 @@
   <div class="hidden md:flex md:ml-auto items-center text-base justify-center">
     <a class="mr-5 hover:text-gray-900" href="index.html">Home</a>
     <a class="mr-5 hover:text-gray-900" href="https://forms.gle/wP8RNcTrhf6oL1LU6">Become a Model</a>
+        <a class="mr-5 hover:text-gray-900" href="magazines.html">Magazines</a>
+
     <a class="mr-5 hover:text-gray-900" href="aboutus.html">About Us</a>
     <a class="mr-5 hover:text-gray-900" href="contact.html">Contact Us</a>
   </div>
@@ -62,6 +64,8 @@
   <nav class="flex flex-col p-4 space-y-4 text-base">
     <a class="hover:text-gray-900" href="index.html">Home</a>
     <a class="hover:text-gray-900" href="https://forms.gle/wP8RNcTrhf6oL1LU6">Become a Model</a>
+        <a class="mr-5 hover:text-gray-900" href="magazines.html">Magazines</a>
+
     <a class="hover:text-gray-900" href="aboutus.html">About Us</a>
     <a class="hover:text-gray-900" href="contact.html">Contact Us</a>
   </nav>
